# android-JNI-NDK-and-SDL2-

./: settings.gradle.kts
app/: Sprite.cpp  Sprite.h  build.gradle.kts
app/src/androidTest/java/com/example/sdlc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidManifest.xml  CMakeLists.txt  Sprite.cpp  Sprite.h  native-lib.cpp
app/src/main/cpp/SDL/: sprite.cpp  sprite.h
app/src/main/cpp/SDL2_image/: REVISION.txt
app/src/main/cpp/SDL2_image/VisualC/: Version.rc
app/src/main/cpp/SDL2_image/src/: version.rc
app/src/main/java/com/example/sdlc/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/sdlc/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
relese apk file/: output-metadata.json
